--- a/resources/assets/sass/media.css
+++ b/resources/assets/sass/media.css
@@ -1,3 +1,21 @@
+.detail_info p {
+    word-wrap: anywhere;
+}
+
+#files li .file_link {
+    padding: 0rem 0rem 0rem 0rem;
+}
+
+#files li .details h4 {
+    height: 60px;
+    max-height: 60px;
+}
+
+#files li .file_link .details {
+    flex: 4;
+    margin: 0rem 0.5rem 0rem 0rem;
+}
+
 .icone_excel {
     color: #207245;
 }
